--- a/week-5/submit_events/index.html
+++ b/week-5/submit_events/index.html
@@ -1,7 +1,6 @@
 <html>
 
 <head>
-	<link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -9,17 +8,17 @@
     <h1>Would you like to enter to win a vacation in Spain?</h1>
     <button onclick="myFunction()">Yes!</button>
 
+
+
     <div>
-        <h1>First Name</h1>
-        <input type="text" id="text-input2" value=''/>
-    </div>
-    <div>
-        <h1>Last Name</h1>
-        <input type="text" id="text-input3" value=''/>
-    </div>
-    <div>
-        <h1>Phone number</h1>
-        <input type="text" id="text-input3" value=''/>
+        <h2>Please fill out information in boxes:</h2>
+        <h4>First Name</h4>
+        <input type="text" id="nameText" value=""/>
+        <h4>Last Name</h4>
+        <input type="text" id="lastText" value=""/>
+        <h4>Phone Number</h4>
+        <input type="text" id="phoneNum" value=""/>
+        <button onclick="confirming()">Confirm</button>
     </div>
 
     <div>
