--- a/week-5/submit_events/index.html
+++ b/week-5/submit_events/index.html
@@ -4,6 +4,8 @@
 </head>
 
 <body>
+
+    <form name=form>
    
     <h1>Would you like to enter to win a vacation in Spain?</h1>
 
@@ -18,9 +20,11 @@
         <input type="text" id="lastText" value=""/>
         <h4>Phone Number</h4>
         <input type="text" id="phoneNum" value=""/>
-            <button onclick="submit()">Submit!</button>
+        <button id="button" name="submit">submit</button>
         </h3>
     </div>
+
+</form>
 
 	<script src="index.js"></script>
 </body>
