updated form submission

--- a/week-5/forms.html
+++ b/week-5/forms.html
@@ -27,9 +27,9 @@
         
         
         <h4>Any dietary restrictions we should know about?</h4>
-        Vegan<input type="radio" id="diet" value="Vegan" name="select">
-        Gluten Free<input type="radio" id="diet" value="Gluten Free" name="select">
-        Keto<input type="radio" id="diet" value="Keto" name="select">
+        Vegan<input type="checkbox" id="diet" value="Vegan" name="select">
+        Gluten Free<input type="checkbox" id="diet" value="Gluten Free" name="select">
+        Keto<input type="checkbox" id="diet" value="Keto" name="select">
         <button id="button" name="submit">submit</button>
     </form>
 </div>
